# gmp

./: .gitignore  BUILD  MODULE.bazel  Makefile  README.md  WORKSPACE  def.bzl  gmp.BUILD  gmp.BUILD.template  gmp_repo.bzl  gmp_test.c  gmpxx_test.cc  go.mod  update_readme  update_readme.py
.github/workflows/: test.yaml
dev/: BUILD
