# Copyright 2025 Philipp Stephani
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_foreign_cc", version = "0.14.0")

gmp_repo = use_repo_rule("//:gmp_repo.bzl", "gmp_repo")

gmp_repo(
    name = "gmp",
    sha256 = "a3c2b80201b89e68616f4ad30bc66aee4927c3ce50e33929ca819d5c43538898",
    version = "6.3.0",
)

bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.0.1",
    dev_dependency = True,
    repo_name = "buildifier",
)
bazel_dep(name = "phst_license_test", version = "0", dev_dependency = True)
git_override(
    module_name = "phst_license_test",
    commit = "2010e53b7a5bf3bdffb6193533b35d7675e9f587",
    remote = "https://github.com/phst/license_test.git",
)

bazel_dep(
    name = "phst_update_workspace_snippets",
    version = "0",
    dev_dependency = True,
    repo_name = "update-workspace-snippets",
)
git_override(
    module_name = "phst_update_workspace_snippets",
    commit = "3ea800b1bfaee16ad01682d1d3871eec9ff6e428",
    remote = "https://github.com/phst/update-workspace-snippets.git",
)
