# Copyright 2025 Philipp Stephani
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.0")
bazel_dep(name = "rules_foreign_cc", version = "0.15.0")

gmp_repo = use_repo_rule("//:gmp_repo.bzl", "gmp_repo")

gmp_repo(
    name = "gmp",
    sha256 = "a3c2b80201b89e68616f4ad30bc66aee4927c3ce50e33929ca819d5c43538898",
    version = "6.3.0",
)

bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.2.0.2",
    dev_dependency = True,
    repo_name = "buildifier",
)
bazel_dep(name = "phst_license_test", version = "0", dev_dependency = True)
git_override(
    module_name = "phst_license_test",
    commit = "ec85ece954341fea4b66543e28109a40f77a8ee3",
    remote = "https://github.com/phst/license_test.git",
)

bazel_dep(
    name = "phst_update_workspace_snippets",
    version = "0",
    dev_dependency = True,
    repo_name = "update-workspace-snippets",
)
git_override(
    module_name = "phst_update_workspace_snippets",
    commit = "1e005166cfbe51b96f351a725bff0fc8e84c5d82",
    remote = "https://github.com/phst/update-workspace-snippets.git",
)
